# sgx-troubleshoot

./: Dockerfile  README.md  go.mod  go.sum  main.go  notestapp.go  testapp.go
testapp/: CMakeLists.txt  Dockerfile  entry.sh  helloworld.edl  oe.patch
testapp/enclave/: CMakeLists.txt  enc.c  helloworld_debug.conf
testapp/host/: CMakeLists.txt  host.c
